2005-07-07  Andras Varga

	omnetapp.cc: fix: ev.getUniqueNumber() produced garbage if it was 
	called from module constructors (its initialization took place too 
	late).

2005-05-01  Andras Varga

	* omnetapp.cc: added [General]/perform-gc omnetpp.ini option 
	(default=true). If turned off, sim.kernel doesn't do garbage 
	collection when deleting the network.

2005-04-05  Andras Varga

	* cinifile.cc: fix: getAsFilenames() crashed if ini file entry is was ""
	[reported by Tom Parker]

	* filemgrs.cc: throw error when output vector file from previous run
	cannot be removed

2005-03-31  ------ omnetpp-3.1 released ------

2005-03-22  Andras Varga

	* omnetapp.cc/h, cenvir.cc: cEnvir::getParameter() return type changed
	from const char * to std::string. This was needed because if the
	parameter value contains the xmldoc() function, getParameter() will 
	now modify the file name in it to make it relative to the 
	position of the ini file the setting was read from.

	* omnetapp.cc/h: handling of -h option moved into TOmnetApp base class.

2005-03-21  Andras Varga

	* omnetapp.cc: fixed memory leak in shutdown code: RNG objects 
	didn't get freed in TOmnetApp destructor. [discovered and patch 
	provided by Nigel Sheridan-Smith]

2005-03-18  Andras Varga

	* cinifile.h/cc: implemented getAsFilenames(), getBaseDirectoryFor(),
	getLocation() functions in cInifile: the class now remembers from which
	ini file every entry was read from. Also, class was upgraded to use
	std::vector.

	* the following configuration settings (due to the use of cfg->getAs-
	FileNames() instead of cfg->getAsString()) now became relative to the
	location of the ini file which contains them:
	  [General], load-libs=
	  [Cmdenv], output-file=
	  [Tkenv], bitmap-path=
	  [General], preload-ned-files=
	  [General] or [Run X], output-vector-file=
	  [General] or [Run X], output-scalar-file=
	  [General] or [Run X], snapshot-file=

2005-03-02  Andras Varga
